# crusty-notes

./: Cargo.toml  README.md
src/: actix_web.rs  async_notes.md  cheat_sheet_1x.md  closure_strategies.rs  errorhandling.rs  interior_mutability.rs  main.rs  mandelbrot_ria.rs  readfile_basics.rs  testing_basics.rs
src/patterns/: builder.rs  deref.rs  mod.rs
