[package]
name = "mith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.28.0"
strum = "0.24.1"
strum_macros = "0.24.3"
actix-web = "1.0.8"
serde = { version = "1.0", features = ["derive"]}
num = "0.4"
